--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,19 @@ android:versionName="1.0" >
 <application
     android:label="@string/app_name" >
     <activity
-        android:name="com.example.freedom.voicerecognition.MainActivity"
+        android:name="com.example.freedom.voicerecognition.Homepage"
         android:label="@string/app_name" >
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+    </activity>
+    <activity android:name=".MainActivity"
+        android:label="@string/app_name">
+    </activity>
+    <activity android:name=".Introduction"
+        android:label="@string/app_name">
     </activity>
 </application>
 
